force-app/main/default/objects/Product__c/fields/Additional_increment_size__c.field-meta.xml
<CustomField>
    <fullName>Additional_increment_size__c</fullName>
    <label>Additional increment size</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>