force-app/main/default/objects/Product__c/fields/Available_for_Fees_Calculation_model__c.field-meta.xml
<CustomField>
    <fullName>Available_for_Fees_Calculation_model__c</fullName>
    <label>Available for Fees Calculation model</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Included Fees</fullName>
            </value>
            <value>
                <fullName>On Top Fees</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>