force-app/main/default/objects/Product__c/fields/Available_For_Pricing_Model__c.field-meta.xml
<CustomField>
    <fullName>Available_For_Pricing_Model__c</fullName>
    <label>Available For Pricing Model</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Activity Based</fullName>
            </value>
            <value>
                <fullName>Net Amount</fullName>
            </value>
            <value>
                <fullName>Pure media + Data</fullName>
            </value>
            <value>
                <fullName>Gross Platform Spend</fullName>
            </value>
            <value>
                <fullName>Pure Media</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>