force-app/main/default/objects/Product__c/fields/Billing_Resource__c.field-meta.xml
<CustomField>
    <fullName>Billing_Resource__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Billing Resource</label>
    <referenceTo>Billing_Resource__c</referenceTo>
    <relationshipName>Products</relationshipName>
    <type>Lookup</type>
</CustomField>