force-app/main/default/objects/Product__c/fields/Help_Text__c.field-meta.xml
<CustomField>
    <fullName>Help_Text__c</fullName>
    <inlineHelpText>Please use {0} condition i help text if you want to use minimum price in Help text from product price level, depending  on user country group.</inlineHelpText>
    <label>Help Text</label>
    <type>TextArea</type>
</CustomField>