force-app/main/default/objects/Product__c/fields/Hide_Pricing_Model__c.field-meta.xml
<CustomField>
    <fullName>Hide_Pricing_Model__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Hide pricing model from pricing information export.</inlineHelpText>
    <label>Hide Pricing Model</label>
    <type>Checkbox</type>
</CustomField>