force-app/main/default/objects/Product__c/fields/Is_Currency_Included__c.field-meta.xml
<CustomField>
    <fullName>Is_Currency_Included__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Currency Included</label>
    <type>Checkbox</type>
</CustomField>