force-app/main/default/objects/Product__c/fields/Is_Fixed_Currency__c.field-meta.xml
<CustomField>
    <fullName>Is_Fixed_Currency__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Fixed Currency</label>
    <type>Checkbox</type>
</CustomField>