force-app/main/default/objects/Product__c/fields/Measure__c.field-meta.xml
<CustomField>
    <fullName>Measure__c</fullName>
    <label>Measure</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fixed</fullName>
            </value>
            <value>
                <fullName>%</fullName>
            </value>
            <value>
                <fullName>CPM</fullName>
            </value>
            <value>
                <fullName>CPC</fullName>
            </value>
            <value>
                <fullName>% from RTB budget spend</fullName>
            </value>
            <value>
                <fullName>Fixed per app install</fullName>
            </value>
            <value>
                <fullName>Report</fullName>
            </value>
            <value>
                <fullName>Hour</fullName>
            </value>
            <value>
                <fullName>Month</fullName>
            </value>
            <value>
                <fullName>% (adserving cost)</fullName>
            </value>
            <value>
                <fullName>All</fullName>
            </value>
            <value>
                <fullName>KB</fullName>
            </value>
            <value>
                <fullName>Imp</fullName>
            </value>
            <value>
                <fullName>CPM (incremental per MB)</fullName>
            </value>
            <value>
                <fullName>Thousand Impressions</fullName>
            </value>
            <value>
                <fullName>Budget</fullName>
            </value>
            <value>
                <fullName>Thousand Impressions (incremental per each 1,000 KB above 3,000 KB)</fullName>
            </value>
            <value>
                <fullName>Search Engine Costs</fullName>
            </value>
            <value>
                <fullName>Click</fullName>
            </value>
            <value>
                <fullName>Campaign</fullName>
            </value>
            <value>
                <fullName>TPAS fees</fullName>
            </value>
            <value>
                <fullName>TPAS and Third Party Tracking with Adform fees</fullName>
            </value>
            <value>
                <fullName>RTB Service Fee Units indicated above or CPM</fullName>
            </value>
            <value>
                <fullName>Banner Created</fullName>
            </value>
            <value>
                <fullName>Trading Desk Fee</fullName>
            </value>
            <value>
                <fullName>-</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>