force-app/main/default/objects/Product__c/fields/Period_Of_Invoicing__c.field-meta.xml
<CustomField>
    <fullName>Period_Of_Invoicing__c</fullName>
    <label>Period Of Invoicing</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Monthly</fullName>
                <default>true</default>
                <label>Monthly</label>
            </value>
            <value>
                <fullName>On Campaign End</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>