force-app/main/default/objects/Product__c/fields/Read_Only__c.field-meta.xml
<CustomField>
    <fullName>Read_Only__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check, if you want to disable service from editing.</inlineHelpText>
    <label>Read Only</label>
    <type>Checkbox</type>
</CustomField>