force-app/main/default/objects/Product__c/fields/Tier_Name__c.field-meta.xml
<CustomField>
    <fullName>Tier_Name__c</fullName>
    <label>Tier Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Basic</fullName>
            </value>
            <value>
                <fullName>Advanced</fullName>
            </value>
            <value>
                <fullName>Premium</fullName>
            </value>
            <value>
                <fullName>Supersize</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>