force-app/main/default/objects/Product__c/fields/Volume_from__c.field-meta.xml
<CustomField>
    <fullName>Volume_from__c</fullName>
    <label>Volume from</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>