force-app/main/default/objects/Product__c/fields/Volume_to__c.field-meta.xml
<CustomField>
    <fullName>Volume_to__c</fullName>
    <label>Volume to</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>