force-app/main/default/objects/Product__c/listViews/Related_Billing_Resources.listView-meta.xml
<ListView>
    <fullName>Related_Billing_Resources</fullName>
    <columns>NAME</columns>
    <columns>Billing_Resource__c</columns>
    <filterScope>Everything</filterScope>
    <label>Related Billing Resources</label>
    <language>en_US</language>
</ListView>